[tool.poetry]
name = "selene-intro"
version = "0.1.0"
description = ""
authors = ["Andrii Shevtsov <ashevtso@adobe.com>"]

[tool.poetry.dependencies]
python = "^3.7"
selene = {version = "^2.*", allow-prereleases = true}


[tool.poetry.dev-dependencies]
pytest = "^4.6"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
